2001-03-02  John Harper  <jsh@eazel.com>

	reviewed by: Gene Z. Ragan <gzr@eazel.com>

	Fixed bug 6740 (GNOME Panel mini-icon is used in Sawfish, large
	version needs to be there.):

	* src/nautilus-window.c (nautilus_window_realize): call
	gnome_window_icon_set_from_file () on the window, with the
	image file whose base is `nautilus-launch-icon.png'

2001-03-02  Pavel Cisler  <pavel@eazel.com>

	Fix 7225 (emblem sorting locks up entire system for extended
		  period of time)
		  
	reviewed by: Darin Adler  <darin@eazel.com>

	* libnautilus-extensions/nautilus-file-private.h:
	* libnautilus-extensions/nautilus-file.c: 
	(fill_emblem_cache_if_needed), (compare_by_emblems):
	Implement a simple cache for automatic and keyword emblems.

	* libnautilus-extensions/nautilus-file.c:
	(destroy), (nautilus_file_set_keywords),
	(nautilus_file_emit_changed):
	Nuke the cache when keywords change.

2001-03-02  Gene Z. Ragan  <gzr@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>

	Fixed bug 558, Items don't show up in trash: when dropped.
		
	* libnautilus-extensions/nautilus-volume-monitor.c:
	* libnautilus-extensions/nautilus-volume-monitor.h:
	Added detection for ReiserFS.  ReiserFS is now a
	supported type for the trash folder creation and
	detection code.
	
2001-03-02  Frederic Crozat <fcrozat@mandrakesoft.com>

	reviewed by: Gene Z. Ragan  <gzr@eazel.com>
	
	Fixed bug 7276, No support for bzipped man and info pages
	-- problem for Mandrake
	
	Note that the coding style of these files is not the same
	as the rest of the Nautilus source code.
		
	* components/help/converters/gnome-info2html2/Makefile.am:
	* components/help/converters/gnome-info2html2/main.c: (main):
	* components/help/converters/gnome-man2html2/Makefile.am:
	* components/help/converters/gnome-man2html2/gnome-man2html.c:
	(read_man_page):
	* components/help/hyperbola-filefmt.c:
	(extract_secnum_from_filename), (man_name_without_suffix),
	(fmt_man_populate_tree_for_subdir):
			