@@ -1,5 +1,11 @@
 2001-03-02  John Harper  <jsh@eazel.com>
 
+	* libnautilus-extensions/nautilus-smooth-text-layout-cache.c:
+	disabled self check for now, since it won't work without make
+	install having been run
+
+2001-03-02  John Harper  <jsh@eazel.com>
+
 	reviewed by: Gene Z. Ragan <gzr@eazel.com>
 
 	Fixed bug 6740 (GNOME Panel mini-icon is used in Sawfish, large
